[tool.poetry]
name = "roberta-paperspace"
version = "0.1.0"
description = "Running RoBERTa with Paperspace"
authors = ["Daniela Flores <diflores@uc.cl>"]

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]
python = "^3.6.11"
jupyter = "^1.0.0"
pandas = "^1.1.2"
flake8 = "^3.7.9"
autopep8 = "^1.5.1"
pre-commit = "^2.2.0"
mypy = "^0.770"
isort = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
